[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/ParallaxBackg.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/Start_screen.gd" type="Script" id=2]
[ext_resource path="res://Sprits/Overlay.png" type="Texture" id=3]
[ext_resource path="res://Sprits/Buttons/Quit_Button_Pressed.png" type="Texture" id=4]
[ext_resource path="res://Sprits/Buttons/Start_Button_Normal.png" type="Texture" id=5]
[ext_resource path="res://Sprits/Buttons/Quit_Button_Normal.png" type="Texture" id=6]
[ext_resource path="res://Sprits/Title.png" type="Texture" id=7]
[ext_resource path="res://Sprits/Buttons/Option_Button_Pressed.png" type="Texture" id=8]
[ext_resource path="res://Sprits/Buttons/Start_Button_Pressed.png" type="Texture" id=9]
[ext_resource path="res://Sprits/Buttons/Option_Button_Normal.png" type="Texture" id=10]
[ext_resource path="res://Sounds/Music/Start.mp3" type="AudioStream" id=11]
[ext_resource path="res://Sounds/SFX/Click_button_sfx.mp3" type="AudioStream" id=12]

[node name="Start_screen" type="Node2D"]
script = ExtResource( 2 )

[node name="Overlay" type="Sprite" parent="."]
position = Vector2( 844, 300 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 1021.0
margin_bottom = 596.0

[node name="Start_button" type="TouchScreenButton" parent="Control"]
position = Vector2( 738, 249 )
normal = ExtResource( 5 )
pressed = ExtResource( 9 )

[node name="Option_button" type="TouchScreenButton" parent="Control"]
position = Vector2( 738, 343 )
normal = ExtResource( 10 )
pressed = ExtResource( 8 )

[node name="Quit_button" type="TouchScreenButton" parent="Control"]
position = Vector2( 738, 437 )
normal = ExtResource( 6 )
pressed = ExtResource( 4 )

[node name="ParallaxBackg" parent="." instance=ExtResource( 1 )]

[node name="Title" type="Sprite" parent="."]
position = Vector2( 841, 123 )
texture = ExtResource( 7 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "Music"

[node name="Click_button_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0
bus = "SFX"

[connection signal="pressed" from="Control/Start_button" to="." method="_on_Start_button_pressed"]
[connection signal="pressed" from="Control/Option_button" to="." method="_on_Option_button_pressed"]
[connection signal="pressed" from="Control/Quit_button" to="." method="_on_Quit_button_pressed"]
